# ui

./: .gitignore  DEMO.ipynb  DEMO_BATCH.ipynb  README.md  shell.nix
didius/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  shell.nix
didius/docs/oms/: account.md  components_summary.md  data_format.md  engine.md  interface.md  order.md  order_book.md  todo.md
didius/docs/strategy/: strategies_summary.md  strategy.md
didius/examples/: hantoo_check.rs  hantoo_futureoption_night_getlist.rs  hantoo_futureoption_night_liveprice.rs  hantoo_market_stream.rs  hantoo_ngt_futopt_snapshot.rs  hantoo_trade_check.rs  oms_chain_test.rs  oms_hantoo_execution.py  oms_hantoo_iface.py  oms_hantoo_ngt_futopt.py  oms_hantoo_stock.py  oms_hantoo_stock.rs  oms_ngt_chain_test.rs
didius/src/: client.rs  lib.rs  message.rs  state.rs
didius/src/adapter/: hantoo.rs  hantoo_ngt_futopt.rs  interface.rs  mock.rs  mod.rs
didius/src/logger/: config.rs  message.rs  mod.rs
didius/src/oms/: account.rs  engine.rs  interface.rs  mod.rs  order.rs  order_book.rs
didius/src/strategy/: base.rs  chain.rs  fok.rs  ioc.rs  mod.rs  stop.rs  vwap.rs
didius/src/utils/: mod.rs  universe.rs
didius/src_python/didius/: __init__.py  a.py  client.py
didius/tests/: account_tests.rs  logger_test.rs  logger_tests.rs  oms_hantoo_ngt_futopt.rs  oms_hantoo_ngt_ws.rs  oms_hantoo_stock.rs  oms_hantoo_ws.rs  orderbook_tests.rs  reconcile_tests.rs  verify_async_api.py  verify_rust_oms.py
nixfiles/: python.nix
rhetenor/: .gitignore  README.md  pyproject.toml  shell.nix
rhetenor/academic/: .gitignore  README.md  finetune-02-expand.py  finetune-025-grade.py  finetune-03-improve.py  fintune-03-inspect.py  summary.py  transpile.py
rhetenor/academic/data/: .gitignore
rhetenor/academic/data/articles/: New Concepts in Technical Trading Systems - RSI.txt
rhetenor/academic/data/wikipedia/Breadth of market/: advancedecline-line.txt  mcclellan-oscillator.txt  trin-finance.txt
rhetenor/academic/data/wikipedia/Market trend/: average-directional-movement-index.txt  commodity-channel-index.txt  detrended-price-oscillator.txt  ichimoku-kinko-hyo.txt  kst-oscillator.txt  macd.txt  mass-index.txt  moving-average.txt  parabolic-sar.txt  smart-money-index.txt  trend-line-technical-analysis.txt  trix-technical-analysis.txt  vortex-indicator.txt
rhetenor/academic/data/wikipedia/Momentum/: money-flow-index.txt  relative-strength-index.txt  stochastic-oscillator.txt  true-strength-index.txt  ultimate-oscillator.txt  williams-r.txt
rhetenor/academic/data/wikipedia/Other/: coppock-curve.txt  ulcer-index.txt
rhetenor/academic/data/wikipedia/Support and resistance/: fibonacci-retracement.txt  pivot-point-technical-analysis.txt
rhetenor/academic/data/wikipedia/Volatility/: average-true-range.txt  bollinger-bands.txt  donchian-channel.txt  keltner-channel.txt  standard-deviation.txt  vix.txt
rhetenor/academic/data/wikipedia/Volume/: accumulation-distribution-index.txt  ease-of-movement.txt  force-index.txt  negative-volume-index.txt  on-balance-volume.txt  put-call-ratio.txt  volumeprice-trend.txt
rhetenor/academic/prompts/: finetune-02-expand.json  transpile.json
rhetenor/docs/rhetenor/: aws.md  data.md
rhetenor/docs/technical_indicators/: adl.bf  chaikin.bf  fibonacci.bf  ichimoku.bf  kdj.bf  keltner.bf  stochkd.bf  stochrsi.bf
rhetenor/examples/: batch.py  kline_hantoo_backfill.py  kline_hantoo_live.py
rhetenor/rhetenor-vscode/: .gitignore  .vscodeignore  INSTALL.md  LICENSE  README.md  copy-libs.js  package-lock.json  package.json  shell.nix
rhetenor/rhetenor-vscode/doc/: report.md
rhetenor/rhetenor-vscode/src/: extension.ts
rhetenor/rhetenor-vscode/src/report/: reportGenerator.ts
rhetenor/rhetenor-vscode/syntaxes/: butterflow.tmLanguage.json
rhetenor/src/rhetenor/: aws.py  backtest.py  backtest_interface.py  cli.py  data.py  manager.txt  stat.py  util.py  workflow.py
rhetenor/src/rhetenor/hantoo_mst_spec/: konex.py  kosdaq.py  kospi.py
rhetenor/statistics/: Cargo.toml
rhetenor/statistics/src/: main.rs
rhetenor/tests/: test_aws.py  test_hantoo_kline_logger_reconcile.py  test_hantoo_kline_mock.py  test_hantoo_master.py  test_s3_kline_wrapper.py
