[package]
name = "didius_oms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "didius_oms"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rust_decimal = { version = "1.40.0", features = ["macros"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_yaml = "0.9"
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.5"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
rand = "0.9.2"
