[package]
name = "didius"
version = "0.1.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "didius"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rust_decimal = { version = "1.40.0", features = ["macros", "serde"] }
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
base64 = "0.22"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_yaml = "0.9"
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.5"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
aws-types = "1.1"
aws-credential-types = "1.1"
tokio = { version = "1.0", features = ["full"] }
zip = "0.6"
encoding_rs = "0.8"
zstd = "0.13"

[features]
default = []

[dev-dependencies]
rand = "0.9.2"
