[project]
name = "didius"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "butterflow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/didius"]

[tool.uv.sources]
butterflow = { git = "https://github.com/Thessal/butterflow" }
