[build-system]
#requires = ["maturin>=1.0,<2.0"]
requires = []
build-backend = "maturin"

[project]
name = "didius"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    #"didius",
    "butterflow",
    "morpho",
    "PyYAML>=6.0.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
morpho = { git = "https://github.com/Thessal/transpiler" }
butterflow = { git = "https://github.com/Thessal/butterflow" }

[tool.maturin]
python-source = "src_python"
module-name = "didius.core"